--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div id="next" class="control"></div>
     </div>
-    <audio controls autoplay loop>
+    <audio autoplay loop>
         <source src="http://docs.google.com/uc?export=open&id=1XB9Z1vJcJjpZ5mbtSl7J958VZtMI34RM" type="audio/mp3">
     </audio>
 
