--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
                     class="slide">
                 <img src="https://scontent.fhan3-4.fna.fbcdn.net/v/t1.15752-9/241748320_387988426060857_308864402520931172_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=ae9488&_nc_ohc=M2Ja1FG-sV8AX9tDR2l&_nc_ht=scontent.fhan3-4.fna&oh=7fd59e4f7931013a01411c6a98988901&oe=61632A78"
                     class="slide">
+                <img src="https://scontent.fhan3-2.fna.fbcdn.net/v/t1.15752-9/241754450_1981073315367062_3817209219144263928_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=ae9488&_nc_ohc=ayNqL9JzM8UAX963CsY&_nc_ht=scontent.fhan3-2.fna&oh=fe76936de50acf00293ab7df5fc68e52&oe=61647C34"
+                    class="slide">
             </div>
         </div>
         <div id="next" class="control"></div>
@@ -84,7 +86,6 @@
 <script>
 
 </script>
-<script src='helper.js'></script>
 <script src='main.js'></script>
 
 </html>
