--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="header">
-        <p>Nhấn phím mũi tên để chuyển ảnh</p>
+        <p>Nhấn phím mũi tên để chuyển ảnh nha</p>
         <button id="run">Run</button>
         <button id="stop">Stop</button>
     </div>
