--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="container">
-        <div id="prev" class="control"></div>
+        <button id="prev" class="control">&#8592; </button>
         <div class="slide-container">
             <div class="slides">
 
@@ -78,9 +78,11 @@
                     class="slide">
             </div>
         </div>
-        <div id="next" class="control"></div>
+        <button id="next" class="control">&#8594;</button>
     </div>
-
+    <footer>
+        <p style="text-align: center;">Vũ Trung Kiên &copy; 2021</p>
+    </footer>
 
 </body>
 <script>
