--- a/index.html
+++ b/index.html
@@ -27,65 +27,27 @@
         <button id="prev" class="control">&#8592; </button>
         <div class="slide-container">
             <div class="slides">
-                <img src="https://scontent.fhan3-1.fna.fbcdn.net/v/t1.15752-9/241684642_389512082564204_7868911894698421027_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=ae9488&_nc_ohc=dcfHWzQXP7gAX-4Bne6&_nc_ht=scontent.fhan3-1.fna&oh=d37203a123727611e8f16a5082526d4c&oe=61644CFE"
-                    class="slide">
-                <img src="https://scontent.fhan3-4.fna.fbcdn.net/v/t1.15752-9/226022616_973045393549602_20586676829639622_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=ae9488&_nc_ohc=ZwZo-d6vwiMAX94wCul&_nc_ht=scontent.fhan3-4.fna&oh=cac0cb2abe80bcf7cf6745900a33e522&oe=6162C886"
-                    class="slide">
-                <img src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.15752-9/187521034_295483165552740_3458302156304864482_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=ae9488&_nc_ohc=k44HAvPo5OUAX-NVE_L&_nc_ht=scontent.fhan3-3.fna&oh=904aa5930f34026324dd01645839602d&oe=616392E9"
-                    class="slide">
-                <img src="https://scontent.fhan3-2.fna.fbcdn.net/v/t1.15752-9/241763795_153008907013806_790778616979697055_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=ae9488&_nc_ohc=5x35AYleiF0AX-x8qTM&_nc_ht=scontent.fhan3-2.fna&oh=5ccda9908889c5d35cde7e095c5a62df&oe=6165A177"
-                    class="slide">
-                <img src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.15752-9/228280318_4357503571011146_8936350497588241517_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=ae9488&_nc_ohc=QNvGg61qhwAAX8NmX5h&_nc_ht=scontent.fhan3-3.fna&oh=396ab233ef39e0865e6f1bda82491b7e&oe=6165D5BF"
-                    class="slide">
-                <img src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.15752-9/242171608_1081047195766486_2586124923811770635_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=ae9488&_nc_ohc=Mqch_gLcF8cAX-WYqr8&_nc_oc=AQkyzBBUG54JlBy_y1sA8iKEXR47EAUya69n81gLhy09zdiUgSI8wth7CWpBOd2joP4&_nc_ht=scontent.fhan4-1.fna&oh=b01ec738ab814b2c1849e6c404bb5c46&oe=616C2E83"
-                    class="slide">
-                <img src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.15752-9/241767102_4088815424580118_630906896320172138_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=ae9488&_nc_ohc=WhinoNs11RQAX-Y3UhI&_nc_ht=scontent.fhan4-1.fna&oh=dbaf7027cb65fe4884943161160e6cbd&oe=61668E79"
-                    class="slide">
-                <img src="https://scontent.fhan3-4.fna.fbcdn.net/v/t1.15752-9/235668136_842212586432593_5423344717760907148_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=ae9488&_nc_ohc=ZJRSIRDH4_oAX9I97bs&_nc_ht=scontent.fhan3-4.fna&oh=0fe014e778164f8b526ed81117db6a0b&oe=6164DF27"
-                    class="slide">
-                <img src="https://scontent.fhan3-5.fna.fbcdn.net/v/t1.15752-9/240687261_578554803507552_4991945218594507678_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=ae9488&_nc_ohc=8vGltsL6t6sAX8EMRyj&_nc_ht=scontent.fhan3-5.fna&oh=537235e863ea22ad1c84a905ccbfac2d&oe=616499B9"
-                    class="slide">
-                <img src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.15752-9/240894714_599284931232949_6407832827930202709_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=ae9488&_nc_ohc=vS7REPFtoAYAX-F5GyY&_nc_ht=scontent.fhan3-3.fna&oh=6ddb41a49f544e8aec659c50b5448744&oe=6163E5BE"
-                    class="slide">
+                <img src="/images/187521034_295483165552740_3458302156304864482_n.jpg" class="slide">
+                <img src="/images/200997538_966807914157060_6511462116288048521_n.jpg" class="slide">
+                <img src="/images/226022616_973045393549602_20586676829639622_n.jpg" class="slide">
+                <img src="/images/228280318_4357503571011146_8936350497588241517_n.jpg" class="slide">
+                <img src="/images/235668136_842212586432593_5423344717760907148_n.jpg" class="slide">
+                <img src="/images/240687261_578554803507552_4991945218594507678_n.jpg" class="slide">
+                <img src="/images/240894714_599284931232949_6407832827930202709_n.jpg" class="slide">
+                <img src="/images/241684642_1557883187923728_4729667963057933376_n.jpg" class="slide">
+                <img src="/images/241684642_389512082564204_7868911894698421027_n.jpg" class="slide">
+                <img src="/images/241744857_575493806818872_4257677265488451857_n.jpg" class="slide">
+                <img src="/images/241745351_283346913259857_5525781521207943214_n.jpg" class="slide">
+                <img src="/images/241748320_387988426060857_308864402520931172_n.jpg" class="slide">
+                <img src="/images/241756653_1115674695924981_4696644289356503103_n.jpg" class="slide">
+                <img src="/images/241760752_551870572743594_5643553811395452040_n.jpg" class="slide">
+                <img src="/images/241761782_602384194455222_45798372425315009_n.jpg" class="slide">
+                <img src="/images/241763795_153008907013806_790778616979697055_n.jpg" class="slide">
+                <img src="/images/241767102_4088815424580118_630906896320172138_n.jpg" class="slide">
+                <img src="/images/241770153_1578124049206604_7794814410773331712_n.jpg" class="slide">
+                <img src="/images/241786234_355243292951076_8621431881633174235_n.jpg" class="slide">
+                <img src="/images/241798169_153089070313368_2260645697011679671_n.jpg" class="slide">
 
-
-                <img src="https://scontent.fhan3-4.fna.fbcdn.net/v/t1.15752-9/239881465_380473510237917_4822866031957846179_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=ae9488&_nc_ohc=Z2TC1klpTLIAX-Yo2-H&_nc_ht=scontent.fhan3-4.fna&oh=8d041a5171b42fb69ed5b8a0ba9f071f&oe=616D6D2C"
-                    class="slide">
-                <img src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.15752-9/241745336_969280396957733_8664770750940670034_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=ae9488&_nc_ohc=nrG2qh-4IPUAX8eoosD&_nc_ht=scontent.fhan4-1.fna&oh=72099a37961d41b96a26d22c6d0f448f&oe=6164EAAD"
-                    class="slide">
-                <img src="https://scontent.fhan3-4.fna.fbcdn.net/v/t1.15752-9/241745351_283346913259857_5525781521207943214_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=ae9488&_nc_ohc=C0q5WI-IgOMAX94ZPT6&tn=EYE-5wpmJ5b67jqI&_nc_ht=scontent.fhan3-4.fna&oh=a731809bd7237fd8b0494c6900f6cc29&oe=6164AE00"
-                    class="slide">
-                <img src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.15752-9/241770153_1578124049206604_7794814410773331712_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=ae9488&_nc_ohc=Y4SlZQSaNmMAX9nbg7u&_nc_ht=scontent.fhan3-3.fna&oh=a36349b38ce5f9824252e9373e6288d4&oe=616409D9"
-                    class="slide">
-                <img src="https://scontent.fhan3-4.fna.fbcdn.net/v/t1.15752-9/241798169_153089070313368_2260645697011679671_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=ae9488&_nc_ohc=-EilFavrwecAX_1_r_p&_nc_ht=scontent.fhan3-4.fna&oh=2c7e968008bffbcaad8c064c047392d1&oe=61669E80"
-                    class="slide">
-
-                <img src="https://scontent.fhan4-3.fna.fbcdn.net/v/t1.15752-9/242386871_2364834503651706_5751269243554706357_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=ae9488&_nc_ohc=1GXCvNFopxoAX8Fze2k&_nc_ht=scontent.fhan4-3.fna&oh=f44a61344e5d84258dafa70ef9fb64c5&oe=616E38E6"
-                    class="slide">
-
-                <img src="https://scontent.fhan4-3.fna.fbcdn.net/v/t1.15752-9/241684642_1557883187923728_4729667963057933376_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=ae9488&_nc_ohc=ApAw4qzsyM0AX8Q_kii&_nc_ht=scontent.fhan4-3.fna&oh=510f87fcb619fdbde4630e05305a5722&oe=616686ED"
-                    class="slide">
-                <img src="https://scontent.fhan3-2.fna.fbcdn.net/v/t1.15752-9/241761782_602384194455222_45798372425315009_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=ae9488&_nc_ohc=O87NERtRlqQAX95C988&_nc_ht=scontent.fhan3-2.fna&oh=9d49265ac8497cfe07c1d6838872fcc1&oe=616358C7"
-                    class="slide">
-                <img src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.15752-9/241744857_575493806818872_4257677265488451857_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=ae9488&_nc_ohc=PTKVlemw7WEAX-SmkmR&_nc_ht=scontent.fhan3-3.fna&oh=fcc75f54cfebfbce0e68ea6f7dc9ba4e&oe=616676F1"
-                    class="slide">
-                <img src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.15752-9/241756653_1115674695924981_4696644289356503103_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=ae9488&_nc_ohc=Lmc4ZVD6kIgAX8bY3NN&_nc_oc=AQlvW3GaMux7uIV0-Rs3jLLaCUDbau5B4X5vtJPWP5XOdzEFOeQGdgtBrRrqZ-RT-8U&_nc_ht=scontent.fhan3-3.fna&oh=82b65ec9693ef3dd13fad30d8bcc47bd&oe=616311B6"
-                    class="slide">
-
-                <img src="https://scontent.fhan4-1.fna.fbcdn.net/v/t1.15752-9/242438065_391424962553649_884724758949322151_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=ae9488&_nc_ohc=YI9ucJ-0i_oAX_kGk0h&_nc_ht=scontent.fhan4-1.fna&oh=5fbbb0ec8c48a1eac551b1b0cacd8706&oe=616B10CF"
-                    class="slide">
-                <img src="https://scontent.fhan3-2.fna.fbcdn.net/v/t1.15752-9/241786234_355243292951076_8621431881633174235_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=ae9488&_nc_ohc=GOf1---_v5IAX8ic3MN&_nc_ht=scontent.fhan3-2.fna&oh=c8424513b1797a48871a53ed9d3bd931&oe=61669CFE"
-                    class="slide">
-                <img src="https://scontent.fhan3-4.fna.fbcdn.net/v/t1.15752-9/241748320_387988426060857_308864402520931172_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=ae9488&_nc_ohc=M2Ja1FG-sV8AX9tDR2l&_nc_ht=scontent.fhan3-4.fna&oh=7fd59e4f7931013a01411c6a98988901&oe=61632A78"
-                    class="slide">
-                <img src="https://scontent.fhan3-2.fna.fbcdn.net/v/t1.15752-9/241754450_1981073315367062_3817209219144263928_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=ae9488&_nc_ohc=ayNqL9JzM8UAX963CsY&_nc_ht=scontent.fhan3-2.fna&oh=fe76936de50acf00293ab7df5fc68e52&oe=61647C34"
-                    class="slide">
-                <img src="https://scontent.fhan4-3.fna.fbcdn.net/v/t1.15752-9/242247855_235076768586855_4825340735440168485_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=ae9488&_nc_ohc=BUedfamtVxsAX-0jn0v&_nc_ht=scontent.fhan4-3.fna&oh=14f93f979413d6d5505b3437e9faf482&oe=616BA2BA"
-                    class="slide">
-                <img src="https://scontent.fhan4-2.fna.fbcdn.net/v/t1.15752-9/242231630_1024461968305942_6833074248557443712_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=ae9488&_nc_ohc=SoowrroeJ7wAX8_jitO&_nc_ht=scontent.fhan4-2.fna&oh=4d81723b1483bdbc84dab512a490d970&oe=616C4909"
-                    class="slide">
-                <img src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.15752-9/242275951_966453480601434_6890050702486159873_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=ae9488&_nc_ohc=X3IwLzdvh8QAX-r6aT1&_nc_ht=scontent.fhan3-3.fna&oh=fcfd3cd6704f9a67a2df766b71d1d7c9&oe=616C99C4"
-                    class="slide">
             </div>
         </div>
         <button id="next" class="control">&#8594;</button>
