--- a/index.html
+++ b/index.html
@@ -27,26 +27,46 @@
         <button id="prev" class="control">&#8592; </button>
         <div class="slide-container">
             <div class="slides">
-                <img src="/187521034_295483165552740_3458302156304864482_n.jpg" class="slide">
-                <img src="/200997538_966807914157060_6511462116288048521_n.jpg" class="slide">
-                <img src="/226022616_973045393549602_20586676829639622_n.jpg" class="slide">
-                <img src="/228280318_4357503571011146_8936350497588241517_n.jpg" class="slide">
-                <img src="/235668136_842212586432593_5423344717760907148_n.jpg" class="slide">
-                <img src="/240687261_578554803507552_4991945218594507678_n.jpg" class="slide">
-                <img src="/240894714_599284931232949_6407832827930202709_n.jpg" class="slide">
-                <img src="/241684642_1557883187923728_4729667963057933376_n.jpg" class="slide">
-                <img src="/241684642_389512082564204_7868911894698421027_n.jpg" class="slide">
-                <img src="/241744857_575493806818872_4257677265488451857_n.jpg" class="slide">
-                <img src="/241745351_283346913259857_5525781521207943214_n.jpg" class="slide">
-                <img src="/241748320_387988426060857_308864402520931172_n.jpg" class="slide">
-                <img src="/241756653_1115674695924981_4696644289356503103_n.jpg" class="slide">
-                <img src="/241760752_551870572743594_5643553811395452040_n.jpg" class="slide">
-                <img src="/241761782_602384194455222_45798372425315009_n.jpg" class="slide">
-                <img src="/241763795_153008907013806_790778616979697055_n.jpg" class="slide">
-                <img src="/241767102_4088815424580118_630906896320172138_n.jpg" class="slide">
-                <img src="/241770153_1578124049206604_7794814410773331712_n.jpg" class="slide">
-                <img src="/241786234_355243292951076_8621431881633174235_n.jpg" class="slide">
-                <img src="/241798169_153089070313368_2260645697011679671_n.jpg" class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1E8Lsymy5K6RbmiwnOftXfbpmDkzW5gc_?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/19DccBP1QKCKlPwE0KR8Gha3UKfC3hrOV?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1GoTNpNbnOltlREnKEZt4N6hN-OeHmiwH?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1ziULWJc6BOs2X8-uzX_swlG8fvQNEotc?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/152tIYZ3PCXeSF_jt_HieW-QWQlqqB3QS?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1o-PdZrpmCspv5jH5hV0WGc_xMUFS3hLt?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/19wMW6XYgZk9rYqW3dN4nGN33Di25dBnA?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1hiYQlFv28mBrkhfpUujsGDrza-xSPjsJ?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1eYjTBEtM-xKooLBYtNs_CC2M5ZpHcJFT?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1BJNuoMdpuQvLMAqxVf4ZillCqIWY8Beq?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1fUYBYRVAzGQpHTCPKSVpFpBEg6sgpbOM?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1pzwVWq1Iu6gycXdHvkopAAVaC63f-B36?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1jOSvOPTYqxpUOhMG38ggQV5saFaJYovk?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1CZKi174pBDCZWBSDJ65AHVRsj_1_NYH8?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1rPYhiWHH6ksMpUSWNwDv-B0HsE-ftpwO?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1EHMvHj2PhizK4AuF50gqnlwTXfJK_kWH?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1WO8wxpIDAEsD8oLvxpCA4PYD5RitPppv?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1oNNXam463Dps8lpixgOQJnhbcmozTnUy?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1-0i3V_HPHxPLETYZyOomgPWtFts8ErVL?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1SqxshPE4tQHDF_cfCJR7ea8ZWYW0QF_G?authuser=0"
+                    class="slide">
 
             </div>
         </div>
