--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <div class="header">
         <p>Nhấn phím mũi tên để chuyển ảnh nha</p>
+        <p>Hoặc nhấn run để chạy (Có nhạc ^^)</p>
         <button id="run">Run</button>
         <button id="stop">Stop</button>
     </div>
