--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
         <button id="prev" class="control">&#8592; </button>
         <div class="slide-container">
             <div class="slides">
+                <img src="https://lh3.googleusercontent.com/d/1ETXOQmNVJwg6_DXWnStjlB34BQH252rv?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/18fHebBOV6Hb8LSj5LafU3TAYdYrS7l1Q?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1Nj0qOLhwMVRmJcCOZXyQ5XZ0-hNQ47gZ?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/12JlMildmRpK_pnfRVsSi9WrkWqfSdmIK?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/19v_yeBRFH-mrE295wfnvoy7s_JrF36jw?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/1nyvPL-IZ6Gy_XRq1lt6eSi6xCn0eBAAS?authuser=0"
+                    class="slide">
+                <img src="https://lh3.googleusercontent.com/d/16yKyEDm0akxP8H0YQT71gfagJEt2-RZL?authuser=0"
+                    class="slide">
+
+
                 <img src="https://lh3.googleusercontent.com/d/1E8Lsymy5K6RbmiwnOftXfbpmDkzW5gc_?authuser=0"
                     class="slide">
                 <img src="https://lh3.googleusercontent.com/d/19DccBP1QKCKlPwE0KR8Gha3UKfC3hrOV?authuser=0"
