--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/4.1.1/less.min.js"
         integrity="sha512-mE4RWRhILuNDWPx8sl5Q739XNbibSUZP9dEjdepzpYVw1kDco9ZZ5l/+KHAMffzXNHnmSWexMSN+OX137tNL5A=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6G76ZL7T2K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6G76ZL7T2K');
+    </script>
 
 </head>
 
